Responsive design improvements, added webcut, Windows installer #2

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -411,6 +411,10 @@
   &__container {
     width: 100%;
     justify-content: space-around;
+    align-items: center;
+    @media (max-width: 720px) {
+      width: 90%;
+    }
 
     &__msg {
       height: min-content;
