Style improvements :lipstick:

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -658,6 +658,7 @@
           width: 100%;
           height: 100%;
           font-size: 1.1em;
+          overflow: auto;
 
           &__info {
             margin: 0 2%;
