--- a/views/addFeedForm.ejs
+++ b/views/addFeedForm.ejs
@@ -14,10 +14,10 @@
     <option value="Youtube search box">Youtube search box</option>
   </select>
   <div class="addContent__feed">
-    <input type="text" name="addContent__feed__input" class="addContent__feed__input" placeholder="Enter a RSS feed URL">
+    <input type="text" name="addContent__feed__input input" class="addContent__feed__input" placeholder="Enter a RSS feed URL">
   </div>
   <div class="addContent__weather">
-    <input type="text" name="addContent__weather__input" class="addContent__weather__input" placeholder="Enter a location">
+    <input type="text" name="addContent__weather__input input" class="addContent__weather__input" placeholder="Enter a location">
   </div>
   <div class="addContent__youtube">
     <p class="addContent__youtube__msg flex">Nothing to do here !</p>
