--- a/views/home.ejs
+++ b/views/home.ejs
@@ -78,7 +78,7 @@
             <option value="Gigabyte">Gigabyte</option>
             <option value="Terabyte">Terabyte</option>
           </select>
-          <input class="converter__body__input" placeholder="Enter a value here">
+          <input class="converter__body__input input" placeholder="Enter a value here">
           <select class="converter__body__value2 flex">
             <option value="Choose a value">Choose a value</option>
             <option value="Byte">Byte</option>
@@ -87,7 +87,7 @@
             <option value="Gigabyte">Gigabyte</option>
             <option value="Terabyte">Terabyte</option>
           </select>
-          <input class="converter__body__result">
+          <input class="converter__body__result input">
         </section>
       </span>
       <div class="msgContainer">
@@ -123,7 +123,12 @@
     <div class="about__container hidden">
       <div class="about__container__child flex">
         <h2 class="about__container__child__title">About BadassBoard</h2>
-
+        <section class="about__container__child__section flex">
+          <span class="about__container__child__section__item flex">
+            <p>Current version :</p>
+            <button type="button">Check for updates</button>
+          </span>
+        </section>
       </div>
     </div>
     <div class="confirmation click">
