--- a/src/scss/home/app.scss
+++ b/src/scss/home/app.scss
@@ -4,6 +4,8 @@
 @import '../base/fonts';
 @import '../base/body';
 
+@import '../components/input';
+
 @import '../layouts/about';
 @import '../layouts/animations';
 @import '../layouts/blur';
