--- a/src/scss/layouts/_animations.scss
+++ b/src/scss/layouts/_animations.scss
@@ -1,16 +1,16 @@
 @keyframes shockwave {
   0% {
     padding: 0;
-    box-shadow: 0 0 0.5em rgba(219, 208, 0, 0.5);
+    box-shadow: 0 0 0.5em rgba(99.6,90.2,71.4, 0.5);
   }
 
   50% {
     padding: 3em;
-    box-shadow: 0 0 5em rgba(219, 208, 0, 1);
+    box-shadow: 0 0 5em rgba(99.6,90.2,71.4, 1);
   }
 
   95% {
     padding: 3em;
-    box-shadow: 0 0 10em rgba(219, 208, 0, 0.2);
+    box-shadow: 0 0 10em rgba(99.6,90.2,71.4, 0.2);
   }
 }
