--- a/src/scss/chat/chat.scss
+++ b/src/scss/chat/chat.scss
@@ -4,6 +4,8 @@
 @import '../base/fonts';
 @import '../base/body';
 
+@import '../components/input';
+
 @import '../layouts/blur';
 @import '../layouts/flex';
 @import '../layouts/settings';
