Added dependencies, update module #2

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -126,7 +126,7 @@
         <section class="about__container__child__section flex">
           <span class="about__container__child__section__item flex">
             <p>Current version :</p>
-            <button type="button">Check for updates</button>
+            <button class="updateBtn btn" type="button">Check for updates</button>
           </span>
         </section>
       </div>
