Button style standardization :lipstick:, code cleanup

--- a/src/scss/chat/chat.scss
+++ b/src/scss/chat/chat.scss
@@ -4,6 +4,7 @@
 @import '../base/fonts';
 @import '../base/body';
 
+@import '../components/button';
 @import '../components/input';
 
 @import '../layouts/blur';
