--- a/views/addFeedForm.ejs
+++ b/views/addFeedForm.ejs
@@ -24,7 +24,7 @@
     <p class="addContent__youtube__msg flex">Just click on the green button below <br>and you're all set, dude ! 😉</p>
   </div>
   <div class="addContent__btnContainer">
-    <button class="addContent__cancelBtn">Bring me back !</button>
-    <button class="addContent__submitBtn">Ok, that's it</button>
+    <button class="addContent__cancelBtn btn btn--red">Bring me back !</button>
+    <button class="addContent__submitBtn btn btn--green">Ok, that's it</button>
   </div>
 </div>
