--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -31,7 +31,7 @@
           <div class="chatContainer__msgList__list flex"></div>
           <form class="chatContainer__msgList__form flex">
             <input class="chatContainer__msgList__form__inputMsg input" type="text" name="" value="" placeholder="Say something...">
-            <button class="chatContainer__msgList__form__sendBtn" type="submit" name="chatContainer__msgList__form__sendBtn">Send</button>
+            <button class="chatContainer__msgList__form__sendBtn btn" type="submit" name="chatContainer__msgList__form__sendBtn">Send</button>
           </form>
         </div>
         <section class="chatContainer__botInfo flex">
