--- a/views/home.ejs
+++ b/views/home.ejs
@@ -138,8 +138,8 @@
           <p class="confirmation__child__content__msg">Do you really want to remove this content ?</p>
         </span>
         <span class="confirmation__child__btnContainer flex">
-          <button class="confirmation__child__btnContainer__cancelBtn" type="button" name="confirmation__child__btnContainer__cancelBtn">Nooooooo !</button>
-          <button class="confirmation__child__btnContainer__saveBtn" type="button" name="confirmation__child__btnContainer__saveBtn">Yep yep</button>
+          <button class="confirmation__child__btnContainer__cancelBtn btn btn--red" type="button" name="confirmation__child__btnContainer__cancelBtn">Nooooooo !</button>
+          <button class="confirmation__child__btnContainer__saveBtn btn btn--green" type="button" name="confirmation__child__btnContainer__saveBtn">Yep yep</button>
         </span>
       </section>
     </div>
