--- a/views/home.ejs
+++ b/views/home.ejs
@@ -148,7 +148,7 @@
     </div>
     <%- include('footer'); %>
   </div>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8" type="application/javascript"></script>
+  <script src="/src/jquery-3.5.1.min.js" charset="utf-8" type="application/javascript"></script>
   <script src="/socket.io/socket.io.js" type="application/javascript"></script>
   <script src="/src/js/app.min.js" charset="utf-8" type="application/javascript"></script>
 </body>
