--- a/views/home.ejs
+++ b/views/home.ejs
@@ -124,10 +124,13 @@
       <div class="about__container__child flex">
         <h2 class="about__container__child__title">About BadassBoard</h2>
         <section class="about__container__child__section flex">
-          <span class="about__container__child__section__item flex">
-            <p>Current version :</p>
-            <button class="updateBtn btn" type="button">Check for updates</button>
-          </span>
+          <section class="about__container__child__section__left flex">
+            <span class="about__container__child__section__left__item flex">
+              <p>Current version :</p>
+              <button class="updateBtn btn" type="button">Check for updates</button>
+            </span>
+          </section>
+          <img class="about__container__child__section__img" src="./src/scss/icons/interface/loading.png" alt="BadassBoard logo">
         </section>
       </div>
     </div>
