--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,7 +3,7 @@
   border-radius: 15px;
   border: none;
   background-color: $underline-input;
-  padding: 1%;
+  padding: 0.6em;
   cursor: pointer;
 
   &--green {
