--- a/views/404.ejs
+++ b/views/404.ejs
@@ -11,7 +11,7 @@
 
 <body>
   <div class="flexContainer wrapper" id="wrapper">
-    <div class="backgroundImage"></div>
+    <div class="backgroundImage" style="background-image: url(<%= wallpaper %>)"></div>
     <div class="backgroundColor"></div>
     <main id="mainContainer" class="mainContainer">
       <span id="statusMsg">
