--- a/src/scss/layouts/_about.scss
+++ b/src/scss/layouts/_about.scss
@@ -8,7 +8,7 @@
 
   &__child {
     width: 60%;
-    height: 50%;
+    height: max-content;
     border-radius: 0.5em;
     @include box-shadow;
     background-color: rgba(0, 0, 0, 0.8);
@@ -22,6 +22,7 @@
       width: 100%;
       text-align: center;
       font-size: 1.2em;
+      font-family: distant_galaxyregular;
     }
 
     &__section {
@@ -30,25 +31,60 @@
       height: 100%;
       font-size: 1.05em;
       padding: 0 1.5em;
+      @media(max-width: 720px) {
+        flex-direction: column;
+      }
 
       &__img {
         align-self: center;
         max-width: 30%;
+        margin: 0 1.5em 1.5em 0;
+        @media(max-width: 720px) {
+          margin: 0;
+        }
       }
 
-      &__left {
+      &__right {
         width: 75%;
         font-size: 1.05em;
         flex-direction: column;
+        justify-content: center;
+
+        @media(max-width: 720px) {
+          width: 100%;
+        }
 
         &__item {
           align-items: center;
           justify-content: space-between;
-          width: 75%;
 
           .updateBtn {
             width: 10em;
           }
+        }
+
+        &__item.dev,
+        &__item.license {
+          justify-content: space-between;
+          width: 30%;
+          @media(max-width: 720px) {
+            width: 60%;
+          }
+        }
+
+        &__item.links {
+          justify-content: space-around;
+        }
+
+        &__item.version {
+          width: 75%;
+          @media(max-width: 720px) {
+            width: 100%;
+          }
+        }
+
+        &__item.text {
+          text-align: justify;
         }
       }
     }
