Fixed wallpaper style on upload :lipstick:, updated minify script, styles improvements

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -42,9 +42,7 @@
     </main>
     <%- include('settings'); %>
   </div>
-  <script src="/src/jquery-3.5.1.min.js" charset="utf-8" type="application/javascript"></script>
-  <script src="/socket.io/socket.io.js" type="application/javascript"></script>
-  <script src="/src/js/chat.min.js" charset="utf-8" type="application/javascript"></script>
+  <%- include('scripts'); %>
 </body>
 
 </html>
