--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
 
 <body>
   <style media="screen">
-    body .backgroundImage, .formContainer__container::before {
+    .backgroundImage, .formContainer__container::before {
       background-image: url(<%= wallpaper %>);
     }
   </style>
@@ -58,7 +58,7 @@
       </span>
     </header>
     <main class="mainContainer flex">
-      <div class="formContainer__container">
+      <div id="formContainer__container" class="formContainer__container">
         <div class="formContainer flex">
           <form class="form" method="get">
             <input class="questionBox" type="text" name="question" placeholder="What are you searching for ?">
@@ -175,9 +175,7 @@
     </div>
     <%- include('footer'); %>
   </div>
-  <script src="/src/jquery-3.5.1.min.js" charset="utf-8" type="application/javascript"></script>
-  <script src="/socket.io/socket.io.js" type="application/javascript"></script>
-  <script src="/src/js/app.min.js" charset="utf-8" type="application/javascript"></script>
+  <%- include('scripts'); %>
 </body>
 
 </html>
