Huge bug fixes for content upload, :zap: performance improvements and code refactoring

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,12 +10,7 @@
 </head>
 
 <body>
-  <style media="screen">
-    .backgroundImage, .formContainer__container::before {
-      background-image: url(<%= wallpaper %>);
-    }
-  </style>
-  <div class="backgroundImage"></div>
+  <div id="backgroundImage" class="backgroundImage"></div>
   <div class="wrapper flex">
     <header class="header flex">
       <span class="header__menu">
