Removed useless dependencies, finally replace request by axios, chatbot bug fixes, style improvements :bug: :lipstik:

--- a/src/scss/pages/_chat.scss
+++ b/src/scss/pages/_chat.scss
@@ -17,6 +17,7 @@
   width: 100%;
   align-items: center;
   font-size: 1.1em;
+  max-height: 95vh;
 
   &__msgList {
     width: 65%;
@@ -33,6 +34,7 @@
       margin-bottom: 1.5em;
       flex-direction: column;
       overflow: auto;
+      max-height: 95vh;
 
       .embed {
         * {
