Picture upload hotfixes :ambulance:

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -24,7 +24,7 @@
           </form>
         </div>
         <section class="chatContainer__botInfo flex">
-          <img class="chatContainer__botInfo__icon" src="<%= botIcon %>" alt="Bot icon">
+          <img class="chatContainer__botInfo__icon" src="./src/scss/icons/interface/bot.png" alt="Bot icon">
           <p><%= botName %></p>
         </section>
       </section>
