Chatbot style imporvements :lipstick: 🤖

--- a/src/scss/pages/_chat.scss
+++ b/src/scss/pages/_chat.scss
@@ -12,6 +12,10 @@
   flex-direction: column;
 }
 
+.mainContainer.chatPage {
+  height: 100vh;
+}
+
 .chatContainer {
   height: 95%;
   width: 100%;
