--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -14,7 +14,7 @@
   <div class="backgroundColor"></div>
   <div class="wrapper flex">
     <%- include('header'); %>
-    <main class="mainContainer flex">
+    <main class="mainContainer chatPage flex">
       <section class="chatContainer flex">
         <div class="chatContainer__msgList flex">
           <div class="chatContainer__msgList__list flex"></div>
