Pagination WIP :construction:

--- a/client/scss/pages/_home.scss
+++ b/client/scss/pages/_home.scss
@@ -871,6 +871,11 @@
         }
       }
 
+      .rssContainer__arrows {
+        width: 100%;
+        justify-content: space-evenly;
+      }
+
       .youtubeSearchContainer {
         height: 100%;
 
