--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -129,7 +129,7 @@
     bottom: 0;
     height: 100%;
     width: 100%;
-    content: '';
+    content: "";
     @include background-image;
     filter: blur(5px);
   }
@@ -144,7 +144,7 @@
     opacity: 0.7;
     margin: 3% 0 0;
     box-shadow: 10px 10px 12px 2px $contentBackground;
-    @media(max-width: 720px) {
+    @media (max-width: 720px) {
       width: 70%;
     }
 
@@ -160,7 +160,7 @@
         border: none;
         background: none;
         color: black;
-        @media(max-width: 720px) {
+        @media (max-width: 720px) {
           height: 2em;
           overflow-x: hidden;
           text-overflow: ellipsis;
@@ -181,7 +181,7 @@
 
       &__Submit {
         margin-left: 1%;
-        @media(max-width: 720px) {
+        @media (max-width: 720px) {
           width: 30px;
           height: 30px;
         }
@@ -192,7 +192,7 @@
       font-size: 1.3em;
       width: 100%;
       overflow-y: auto;
-      @media(max-width: 720px) {
+      @media (max-width: 720px) {
         height: auto;
         overflow-y: auto;
       }
@@ -214,7 +214,7 @@
 
         &__label {
           width: 10%;
-          @media(max-width: 720px) {
+          @media (max-width: 720px) {
             width: 30%;
           }
         }
@@ -301,7 +301,7 @@
         text-align: center;
       }
     }
-    @media(max-width: 720px) {
+    @media (max-width: 720px) {
       flex-direction: column;
 
       &__msg,
@@ -329,7 +329,7 @@
     padding: 0.2%;
     border-radius: 45%;
   }
-  @media(max-width: 720px) {
+  @media (max-width: 720px) {
     width: 85%;
   }
 }
@@ -338,7 +338,7 @@
 .audio.playlist .audio__container__player {
   width: 47%;
   min-width: 47%;
-  @media(max-width: 720px) {
+  @media (max-width: 720px) {
     width: 100%;
   }
 }
@@ -350,18 +350,227 @@
   flex-wrap: wrap;
   position: relative;
   padding-bottom: 2em;
-  @media(max-width: 720px) {
+  @media (max-width: 720px) {
     justify-content: flex-start;
     width: 90%;
     flex-wrap: wrap;
   }
 
-  .content__container {
+  .content {
     width: 32%;
     justify-content: space-between;
     @include flex-direction;
+    height: 40vh;
     font-size: 1em;
-    @media(max-width: 720px) {
+    @media (max-width: 720px) {
+      height: auto;
+      width: 100%;
+      @include align(flex-start, end);
+      margin-top: 1.5em;
+    }
+
+    .contentOptions {
+      display: none;
+      @include align(space-between, baseline);
+      @include flex-direction(row);
+      width: 17%;
+      margin-top: 1%;
+
+      &__clearResultsbtn,
+      .removeContentBtn,
+      .updateContentBtn {
+        padding: 5%;
+        cursor: pointer;
+      }
+
+      .removeContentBtn {
+        border: 1px solid red;
+        border-radius: 45%;
+      }
+    }
+
+    .blank {
+      @include align(center, center);
+      opacity: 0;
+      transition: opacity 1000ms, transform 200ms;
+
+      &:hover {
+        display: flex;
+        opacity: 1;
+      }
+
+      &:hover .blank__addContent__svg {
+        transform: rotate(360deg);
+        transition: transform 1000ms;
+      }
+    }
+
+    .addContent,
+    .blank,
+    .forecast,
+    .rssContainer,
+    .warning,
+    .youtubeSearchContainer {
+      @include flex-direction;
+      border-radius: 15px;
+      height: 100%;
+      max-height: 100%;
+      width: 100%;
+      font-size: 1.05em;
+      @media (max-width: 720px) {
+        width: 95%;
+      }
+    }
+
+    .youtubeSearchContainer {
+      @media (max-width: 720px) {
+        height: 50vh;
+      }
+
+      &__content {
+        height: 85%;
+        width: 100%;
+        @include align(flex-start, center);
+        @include flex-direction();
+        overflow: hidden;
+
+        &__results {
+          @include flex-direction();
+          height: 100%;
+          width: 100%;
+          margin-top: 1em;
+          font-size: 1em;
+
+          &__result {
+            margin-bottom: 1.5em;
+            padding: 0.5em;
+
+            &:hover {
+              background-color: opacify($contentBackground, 0.2);
+              border-radius: 1em;
+            }
+
+            img {
+              width: 25%;
+              align-items: center;
+              max-height: 100%;
+              max-width: 100%;
+            }
+
+            &__content {
+              @include flex-direction();
+              width: 75%;
+              padding: 0 0.5em;
+              font-size: 1.1em;
+              word-break: break-word;
+
+              a {
+                text-overflow: ellipsis;
+                min-width: 0;
+                overflow: hidden;
+                white-space: nowrap;
+              }
+
+              p {
+                margin: 0.6em 0 0;
+
+                u {
+                  text-decoration-style: dashed;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      &__header {
+        width: 100%;
+      }
+    }
+
+    .blank,
+    .forecast,
+    .rssContainer,
+    .warning,
+    .youtubeSearchContainer {
+      padding: 0 1% 2% 2%;
+    }
+
+    .forecast,
+    .rssContainer,
+    .youtubeSearchContainer {
+      // Show content options
+      &__header {
+        transition: display 400ms;
+
+        &:hover .contentOptions {
+          display: flex;
+        }
+      }
+    }
+
+    .forecast {
+      margin-right: -3%;
+
+      &__header {
+        display: inline-flex;
+        align-items: center;
+        padding-right: 2%;
+
+        &__title {
+          width: 100%;
+          margin: 2% 0;
+          text-align: center;
+        }
+      }
+
+      &__content {
+        @include flex-direction(row);
+        width: 100%;
+        height: 100%;
+        font-size: 1.1em;
+        overflow: auto;
+
+        &__info {
+          margin: 0 2%;
+          height: 100%;
+          width: 50%;
+          @include flex-direction;
+
+          * {
+            display: flex;
+            align-items: center;
+          }
+
+          span {
+            margin-top: 2%;
+          }
+
+          .forecastIcon {
+            @include forecastIcon();
+          }
+
+          &__description__desc,
+          &__humidity__desc,
+          &__temp__desc {
+            margin: 0;
+          }
+        }
+      }
+
+      &__weatherIcon,
+      .icon {
+        @include align(end, flex-start);
+        width: 50%;
+
+        &__icon {
+          font-size: 3.5em;
+          margin-right: 5%;
+        }
+      }
+    }
+
+    @media (max-width: 720px) {
       width: 100%;
 
       .content.content1 {
@@ -370,236 +579,6 @@
 
       .newContent {
         display: none;
-      }
-    }
-
-    .content {
-      height: 40vh;
-      width: 100%;
-      font-size: 1.2em;
-      @media(max-width: 720px) {
-        height: auto;
-        width: 100%;
-        @include align(flex-start, end);
-        margin-top: 1.5em;
-      }
-
-      .contentOptions {
-        display: none;
-        @include align(space-between, baseline);
-        @include flex-direction(row);
-        width: 17%;
-        margin-top: 1%;
-
-        &__clearResultsbtn,
-        .removeContentBtn,
-        .updateContentBtn {
-          padding: 5%;
-          cursor: pointer;
-        }
-
-        .removeContentBtn {
-          border: 1px solid red;
-          border-radius: 45%;
-        }
-      }
-
-      .blank {
-        @include align(center, center);
-        opacity: 0;
-        transition: opacity 1000ms, transform 200ms;
-
-        &:hover {
-          display: flex;
-          opacity: 1;
-        }
-
-        &:hover .blank__addContent__svg {
-          transform: rotate(360deg);
-          transition: transform 1000ms;
-        }
-      }
-
-      .flex {
-        display: flex;
-      }
-
-      .addContent,
-      .blank,
-      .forecast,
-      .rssContainer,
-      .warning,
-      .youtubeSearchContainer {
-        @include flex-direction;
-        background-color: $contentBackground;
-        border-radius: 15px;
-        height: 100%;
-        max-height: 100%;
-        width: 100%;
-        font-size: 1.05em;
-        @media(max-width: 720px) {
-          width: 95%;
-        }
-      }
-
-      .addContent,
-      .blank,
-      .forecast,
-      .rssContainer,
-      .youtubeSearchContainer {
-        box-shadow: 10px 10px 12px 2px $contentBackground;
-      }
-
-      .blank,
-      .forecast,
-      .rssContainer,
-      .warning,
-      .youtubeSearchContainer {
-        padding: 0 1% 2% 2%;
-      }
-
-      .forecast,
-      .rssContainer,
-      .youtubeSearchContainer {
-        // Show content options
-        &__header {
-          transition: display 400ms;
-
-          &:hover .contentOptions {
-            display: flex;
-          }
-        }
-      }
-
-      .forecast {
-        margin-right: -3%;
-
-        &__header {
-          display: inline-flex;
-          align-items: center;
-          padding-right: 2%;
-
-          &__title {
-            width: 100%;
-            margin: 2% 0;
-            text-align: center;
-          }
-        }
-
-        &__content {
-          @include flex-direction(row);
-          width: 100%;
-          height: 100%;
-          font-size: 1.1em;
-          overflow: auto;
-
-          &__info {
-            margin: 0 2%;
-            height: 100%;
-            width: 50%;
-            @include flex-direction;
-
-            * {
-              display: flex;
-              align-items: center;
-            }
-
-            span {
-              margin-top: 2%;
-            }
-
-            .forecastIcon {
-              @include forecastIcon();
-            }
-
-            &__description__desc,
-            &__humidity__desc,
-            &__temp__desc {
-              margin: 0;
-            }
-          }
-        }
-
-        &__weatherIcon,
-        .icon {
-          @include align(end, flex-start);
-          width: 50%;
-
-          &__icon {
-            font-size: 3.5em;
-            margin-right: 5%;
-          }
-        }
-      }
-
-      .youtubeSearchContainer {
-        @media(max-width: 720px) {
-          height: 50vh;
-        }
-
-        &__content {
-          height: 85%;
-          width: 100%;
-          @include align(flex-start, center);
-          @include flex-direction();
-
-          &__results {
-            @include flex-direction();
-            visibility: hidden;
-            height: 100%;
-            width: 100%;
-            margin-top: 1em;
-            font-size: 1em;
-            overflow: auto;
-
-            &__result {
-              margin-bottom: 1.5em;
-              padding: 0.5em;
-
-              &:hover {
-                background-color: opacify($contentBackground, 0.2);
-                border-radius: 1em;
-              }
-
-              &__thumbnailContainer {
-                width: 25%;
-                align-items: center;
-
-                img {
-                  max-height: 100%;
-                  max-width: 100%;
-                }
-              }
-
-              &__content {
-                @include flex-direction();
-                width: 75%;
-                padding: 0 0.5em;
-                font-size: 1.1em;
-                word-break: break-word;
-
-                a {
-                  text-overflow: ellipsis;
-                  min-width: 0;
-                  overflow: hidden;
-                  white-space: nowrap;
-                }
-
-                p {
-                  margin: 0.6em 0 0;
-
-                  u {
-                    text-decoration-style: dashed;
-                  }
-                }
-              }
-            }
-          }
-        }
-
-        &__header {
-          width: 100%;
-        }
       }
     }
 
@@ -720,7 +699,7 @@
       .article {
         @include flex-direction;
         margin-top: 0.5em;
-        @media(max-width: 720px) {
+        @media (max-width: 720px) {
           padding-left: 0.6em;
         }
 
@@ -792,7 +771,7 @@
   &__child {
     width: 50%;
     height: 60%;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0, 0, 0, 0.7);
     border-radius: 1em;
     flex-direction: column;
     box-shadow: 10px 10px 12px 2px $contentBackground;
